--- a/estudantes/templates/estudantes/alinhamentos_gerais.html
+++ b/estudantes/templates/estudantes/alinhamentos_gerais.html
@@ -13,7 +13,10 @@
 {% endblock %}
 
 {% block content %}
-  <span class="titulo">{{ titulo }}</span>
+  <span class="titulo">
+    <span lang="pt">{{ titulo.pt }}</span>
+    <span lang="en">{{ titulo.en }}</span>
+  </span>
   <br>
 
   <div class="div_arredondado pintern">
