--- a/organizacoes/templates/organizacoes/parceiro_projetos.html
+++ b/organizacoes/templates/organizacoes/parceiro_projetos.html
@@ -11,14 +11,21 @@
 {% endblock %}
 
 {% block content %}
-  <span class="titulo">{{ titulo }}</span>
 
-  <b>Organização</b>:
+  <span class="titulo">
+    <span lang="pt">{{ titulo.pt }}</span>
+    <span lang="en">{{ titulo.en }}</span>
+  </span>
+
+  <b>
+    <span lang="pt">Organização</span>
+    <span lang="en">Organization</span>
+  </b>:
   {% if organiza %}
      {{ organizacao }}
   {% else %}
-    NÃO DEFINIDA
-    (Essa área é para ser usada apenas por usuários de organizações cadastradas no sistema)
+    <span lang="pt">NÃO DEFINIDA (Essa área é para ser usada apenas por usuários de organizações cadastradas no sistema)</span>
+    <span lang="en">NOT DEFINED (This area is to be used only by users from organizations registered in the system)</span>
   {% endif %}
   <br><br>
 
@@ -38,13 +45,22 @@
           </tr>
         {% empty %}
           <tr>
-            <td colspan="3">Não existem projetos disponíveis pela sua organização.</td>
+            <td colspan="3">
+              <span lang="pt">Não existem projetos disponíveis pela sua organização.</span>
+              <span lang="en">There are no projects available from your organization.</span>
+            </td>
           </tr>
         {% endfor %}
       </tbody>
     </table>
   </div>
   <p>&nbsp;</p>
-  <strong>Número Total de Projetos:</strong> ({{ projetos.count }})<br>
+  <strong>
+    <span lang="pt">Número Total de Projetos:</span>
+    <span lang="en">Total Number of Projects:</span>
+  </strong>
+  {{ projetos.count }}<br>
+
+  {% include "linguas.html" %}
 
 {% endblock %}
