--- a/administracao/templates/administracao/dados_backup.html
+++ b/administracao/templates/administracao/dados_backup.html
@@ -16,7 +16,10 @@
 
 {% block content %}
 
-  <span class="titulo">{{ titulo }}</span>
+  <span class="titulo">
+    <span lang="pt">{{ titulo.pt }}</span>
+    <span lang="en">{{ titulo.en }}</span>
+  </span>
 
   <form method="post"> {% csrf_token %}
 
