--- a/estudantes/templates/estudantes/alocacao_semanal.html
+++ b/estudantes/templates/estudantes/alocacao_semanal.html
@@ -9,7 +9,11 @@
 {% endblock %}
 
 {% block content %}
-  <span class="titulo">{{ titulo }}</span>
+  
+  <span class="titulo">
+    <span lang="pt">{{ titulo.pt }}</span>
+    <span lang="en" style="display:none">{{ titulo.en }}</span>
+  </span>
 
   {% include "mostra_horarios.html" %}
 
