--- a/estudantes/templates/estudantes/informacoes_adicionais.html
+++ b/estudantes/templates/estudantes/informacoes_adicionais.html
@@ -25,7 +25,12 @@
 {% endblock %}
 
 {% block content %}
-  <span class="titulo">{{ titulo }}</span>  
+  
+  <span class="titulo">
+    <span lang="pt">{{ titulo.pt }}</span>
+    <span lang="en" style="display:none;">{{ titulo.en }}</span>
+  </span>
+
   {% if mensagem %}<h6 class="red-bold">{{mensagem}}</h6>{% endif %}
   {% if vencido and user.tipo_de_usuario == 1 %}<h6 class="red-bold">Prazo vencido. Você não pode editar seus dados!</h6>{% endif %}
 
