--- a/estudantes/templates/estudantes/submissao_documento.html
+++ b/estudantes/templates/estudantes/submissao_documento.html
@@ -43,7 +43,11 @@
 
 
 {% block content %}
-  <span class="titulo">{{titulo}}</span>
+
+  <span class="titulo">
+    <span lang="pt">{{ titulo.pt }}</span>
+    <span lang="en" style="display:none">{{ titulo.en }}</span>
+  </span>
 
   {% if mensagem %}
     <span class="red-bold">{{mensagem|linebreaks}}</span>
@@ -155,7 +159,6 @@
     }
   </script>
 
-  {% comment %} Sistema de controle de exibição de linguas. {% endcomment %}
-  {% include "linguas.html" %}
+  {% comment %} {% include "linguas.html" %} {% endcomment %}
 
 {% endblock %}
