--- a/organizacoes/templates/organizacoes/organizacao_completo.html
+++ b/organizacoes/templates/organizacoes/organizacao_completo.html
@@ -41,11 +41,17 @@
 {% endblock %}
 
 {% block content %}
+  
+  <span class="titulo">
+    <span lang="pt">{{ titulo.pt }}</span>
+    <span lang="en">{{ titulo.en }}</span>
+  </span>
+
   {% if organizacao.logotipo %}
     <img id="logotipo" src="{{ organizacao.logotipo.url }}" alt="{{ organizacao.sigla }}">
   {% endif %}
 
-  <span class="titulo">{{titulo}}</span>
+  <h4>{{organizacao.nome}}</h4>
   
   {% if organizacao.website %}
     <strong>website:</strong> <a href="{{ organizacao.website }}"> {{ organizacao.website }} </a><br>  
@@ -282,5 +288,6 @@
 
   {% include "documento-modal.html" %}
   {% include "annotation-modal2.html" %} {% comment %} Esse é para projeto e organizacao completo {% endcomment %}
+  {% include "linguas.html" %}
 
 {% endblock %}
