--- a/professores/templates/professores/orientadores_tabela_completa.html
+++ b/professores/templates/professores/orientadores_tabela_completa.html
@@ -25,8 +25,14 @@
       <table id="professores" class="table table-bordered table-hover table-sm" style="width: auto;">
         <thead class="table-info">
           <tr>
-            <th scope="col" style="text-align: center;width:300px;"><span style="margin-right: 0.6ex;">{{cabecalhos.0}}</span></th>
-            <th scope="col" style="text-align: center;width:70px;"><span style="margin-right: 0.6ex;">{{cabecalhos.1}}</span></th>
+            <th scope="col" style="text-align: center;width:300px;"><span style="margin-right: 0.6ex;">
+              <span lang="pt">{{cabecalhos.0.pt}}</span>
+              <span lang="en">{{cabecalhos.0.en}}</span>
+            </span></th>
+            <th scope="col" style="text-align: center;width:70px;"><span style="margin-right: 0.6ex;">
+              <span lang="pt">{{cabecalhos.1.pt}}</span>
+              <span lang="en">{{cabecalhos.1.en}}</span>
+            </span></th>
           </tr>
         </thead>
         {% for professor,grupos in professores %} 
