--- a/templates/cabecalho_projeto.html
+++ b/templates/cabecalho_projeto.html
@@ -7,41 +7,41 @@
 {% if user.is_authenticated and user.tipo_de_usuario == 2 or user.tipo_de_usuario == 4 %}
 
   {% if projeto.organizacao %}
-    <b lang="pt">Organização:</b><b lang="en">Organization:</b>
+    <b lang="pt">Organização:</b><b lang="en" style="display:none">Organization:</b>
     <a href="{% url 'organizacao_completo' projeto.organizacao.id %}">{{projeto.organizacao.nome}}</a>
   {% else %}
     <span lang="pt">Organização: Não definida</span><span lang="en">Organization: Not defined</span>
   {% endif %}<br>
   
-  <b lang="pt">Projeto:</b><b lang="en">Project:</b>
+  <b lang="pt">Projeto:</b><b lang="en" style="display:none">Project:</b>
     <a href="{% url 'projeto_completo' projeto.id %}">{{projeto.get_titulo}}{% include "tipo_projeto.html" %}</a><br>
 
   {% comment %} Mostrar só se todas edições {% if edicao == "todas" %} {% endcomment %}
-  <b lang="pt">Semestre:</b><b lang="en">Semester:</b>
+  <b lang="pt">Semestre:</b><b lang="en" style="display:none">Semester:</b>
     {{projeto.ano}}.{{projeto.semestre}}<br>
   
   {% if request.user != projeto.orientador.user or administracao %}
     {% if projeto.orientador %}
       {% if banca.projeto.proposta.intercambio %}
         <b lang="pt">Professor{% if projeto.orientador.user.genero == 'F' %}a{% endif %} Responsável:</b>
-        <b lang="en">Professor in charge:</b>
+        <b lang="en" style="display:none">Professor in charge:</b>
       {% else %}
         <b lang="pt">Orientador{% if projeto.orientador.user.genero == 'F' %}a{% endif %}:</b>
-        <b lang="en">Advisor:</b>
+        <b lang="en" style="display:none">Advisor:</b>
       {% endif %}
       <a href="{% url 'professor_detail' projeto.orientador.id %}">{{ projeto.orientador.user.get_full_name }}</a>
       <span class="opt_full"><a href="mailto:{{projeto.orientador.user.email}}">&lt;{{projeto.orientador.user.email}}&gt;</a></span>
       <span class="opt_short"><a href="mailto:{{projeto.orientador.user.email}}"><i class="far fa-envelope"></i></a></span>
     {% else %}
       <span lang="pt">Orientador: Não definido</span>
-      <span lang="en">Advisor: Not defined</span>
+      <span lang="en" style="display:none">Advisor: Not defined</span>
     {% endif %}
     <br>
 
     {% with coorientadores=banca.get_projeto.coorientador_set.all %}
       {% if coorientadores %}
         <b lang="pt">Coorientação:</b>
-        <b lang="en">Co-advisoring:</b>
+        <b lang="en" style="display:none">Co-advisoring:</b>
         {% for coorientador in coorientadores %}
           <a class="imprimir" href="{% url 'user_detail' coorientador.usuario.id %}">
             {{coorientador.usuario.get_full_name}} 
@@ -56,24 +56,24 @@
 
 {% else %}
 
-  <b lang="pt">Projeto:</b><b lang="en">Project:</b>
+  <b lang="pt">Projeto:</b><b lang="en" style="display:none">Project:</b>
     {{projeto.get_titulo}}{% include "tipo_projeto.html" %}<br>
-  <b lang="pt">Semestre:</b><b lang="en">Semester:</b>
+  <b lang="pt">Semestre:</b><b lang="en" style="display:none">Semester:</b>
     {{projeto.ano}}.{{projeto.semestre}}<br>
   {% if projeto.organizacao %}
-  <b lang="pt">Organização:</b><b lang="en">Organization:</b>
+  <b lang="pt">Organização:</b><b lang="en" style="display:none">Organization:</b>
     {{projeto.organizacao.nome}}
   {% else %}
-    <span lang="pt">Organização: Não definida</span><span lang="en">Organization: Not defined</span>
+    <span lang="pt">Organização: Não definida</span><span lang="en" style="display:none">Organization: Not defined</span>
   {% endif %}<br>
 
   {% if projeto.orientador %}
     {% if banca.projeto.proposta.intercambio %}
       <b lang="pt">Professor{% if projeto.orientador.user.genero == 'F' %}a{% endif %} Responsável:</b>
-      <b lang="en">Professor in charge:</b>
+      <b lang="en" style="display:none">Professor in charge:</b>
     {% else %}
       <b lang="pt">Orientador{% if projeto.orientador.user.genero == 'F' %}a{% endif %}:</b>
-      <b lang="en">Advisor:</b>
+      <b lang="en" style="display:none">Advisor:</b>
     {% endif %}
       {{projeto.orientador.user.get_full_name}}
       {% if com_email %}
@@ -82,7 +82,7 @@
       {% endif %}<br>
   {% else %}
     <span lang="pt">Orientador: Não definido</span>
-    <span lang="en">Advisor: Not defined</span>
+    <span lang="en" style="display:none">Advisor: Not defined</span>
   {% endif %}
 
 
